--- a/style.css
+++ b/style.css
@@ -58,47 +58,60 @@ h1 {
 
 }
 
-.div-for-text p {
+.div-for-text {
     text-align: center;
 
 }
 
+.div-for-text h1 {
+    text-align: center;
+}
+
 .recipe {
     display: flex;
+    gap: 2%;
     width: 100%;
+    height: 670px;
+    margin-left: 10%;
+}
+
+.recipe-div p {
+    margin: 18px;
+}
+
+.recipe-div h2 {
+    margin: 18px;
 }
 
 .recipe-div {
     border-radius: 25px;
-    height: auto;
-    width: 45%;
-    margin: 3%;
-    text-align: justify;
+    height: 550px;
+    width: 40%;
     box-shadow: 4px 3px 25px gray;
 }
 
 .recipe-div img {
 
     border-radius: 25px;
-    width: 625px;
+    width: 570px;
     margin: 3%;
-    margin-right: 3%;
-    height: 350px;
+    height: 300px;
 }
 
 
 .middle-below {
-    margin: 6%;
     box-shadow: 1px 1px 15px gray;
     border-radius: 25px;
-    height: 250px;
+    height: 240px;
     display: flex;
     align-items: center;
+    gap: 7%;
+    margin: 5%;
 
 }
 
 .div-align {
-    margin-left: 13rem;
+    margin: 8%;
 }
 
 footer {
